--- a/.github/workflows/replicate-huggingface.yaml
+++ b/.github/workflows/replicate-huggingface.yaml
@@ -19,9 +19,10 @@ jobs:
         with:
           python-version: "3.10"
           cache: "pip"
+          cache-dependency-path: "replicate-huggingface/requirements.txt"
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install wheel
-          pip install huggingface_hub coscmd
+          pip install -r replicate-huggingface/requirements.txt
