--- a/.github/workflows/replicate-huggingface.yaml
+++ b/.github/workflows/replicate-huggingface.yaml
@@ -26,3 +26,12 @@ jobs:
           python -m pip install --upgrade pip
           pip install wheel
           pip install -r replicate-huggingface/requirements.txt
+
+      - name: Setup coscli
+        env:
+          COSCLI_CONFIG_BASE64: ${{ secrets.COS_CLI_CONFIG_BASE64_ASSETS }}
+        run: |
+          curl -sSLo coscli 'https://github.com/tencentyun/coscli/releases/download/v1.0.3/coscli-v1.0.3-linux-amd64'
+          chmod +x coscli
+          echo $COSCLI_CONFIG_BASE64 | base64 -d > ~/.cos.yaml
+          ./coscli ls cos://assets
