--- a/.github/workflows/replicate-huggingface.yaml
+++ b/.github/workflows/replicate-huggingface.yaml
@@ -41,5 +41,5 @@ jobs:
           HF_TOKEN: ${{ secrets.HF_TOKEN_RO }}
         run: |
           huggingface-cli download --local-dir-use-symlinks False --local-dir "${{ github.event.inputs.model_id }}" "${{ github.event.inputs.model_id }}"
-          rm -rf "${{ github.event.inputs.model_id }}/.git*" "${{ github.event.inputs.model_id }}/.cache"
+          rm -rf "${{ github.event.inputs.model_id }}/.cache"
           ./coscli cp -r --part-size 128 "${{ github.event.inputs.model_id }}/" "cos://assets/huggingface.co/${{ github.event.inputs.model_id }}/"
