--- a/.github/workflows/replicate-civitai-model.yaml
+++ b/.github/workflows/replicate-civitai-model.yaml
@@ -35,6 +35,6 @@ jobs:
           jq -c '.modelVersions[0].files[]' model.json | while read -r item; do
             FILENAME="dl/$(echo "$item" | jq -r '.name')"
             FILE_URL="$(echo "$item" | jq -r '.downloadUrl')"
-            echo curl -sSL -H "Authorization: Bearer $CIVITAI_API_KEY" -o "$FILENAME" "$FILE_URL"
+            curl -sSL -H "Authorization: Bearer $CIVITAI_API_KEY" -o "$FILENAME" "$FILE_URL"
           done
-          echo ./coscli cp -r --part-size 128 "dl/" "cos://assets/civitai.com/models/${{ github.event.inputs.model_id }}/"
+          ./coscli cp -r --part-size 128 "dl/" "cos://assets/civitai.com/models/${{ github.event.inputs.model_id }}/"
